--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -31,3 +31,19 @@
     @apply opacity-100;
   }
 }
+
+/* Swiper css */
+.swiper {
+  width: 100%;
+  height: 50%;
+}
+
+.swiper-slide {
+  background-position: center;
+  background-size: cover;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+}
