--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -35,3 +35,27 @@
 .text-shadow {
   text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5); /* Ombre légère */
 }
+
+@media (min-width: 1200px) and (max-width: 1399px) {
+  /* Vos styles spécifiques */
+  .ei_m {
+    margin-top: -40px;
+    margin-left: -14px;
+  }
+  .ca_m {
+    margin-top: -33px;
+    margin-left: -22px;
+  }
+  .mdj_m {
+    margin-top: -39px;
+    margin-left: -27px;
+  }
+  .mba_m {
+    margin-top: -43px;
+    margin-left: -43px;
+  }
+  .d_m {
+    margin-top: -40px;
+    margin-left: -48px;
+  }
+}
